<resources>
    <string name="app_name">Plebicite</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_political">Political party</string>
    <string name="title_account">Account</string>
    <string name="title_activity_vote">VoteActivity</string>
</resources>
