<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_blackhome_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_vote_app_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_party"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/title_political"/>
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_account"/>

</menu>
